--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,13 @@
 <IfModule mod_rewrite.c>
+    
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
     </IfModule>
-    AddHandler application/x-httpd-php74 .php
+
+    <IfModule mod_headers.c>
+        Header set Cache-Control "private"
+    </IfModule>
+
 
     RewriteEngine On
 
@@ -20,10 +25,4 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 </IfModule>
-
-# php -- BEGIN cPanel-generated handler, do not edit
-# Set the “ea-php74” package as the default “PHP” programming language.
-<IfModule mime_module>
-  AddHandler application/x-httpd-ea-php74 .php .php7 .phtml
-</IfModule>
-# php -- END cPanel-generated handler, do not edit
+ 
